@@ -3,6 +3,8 @@ Changelog
 
 2.4.dev0 - (unreleased)
 -----------------------
+* Feature: Added Copernicus Publication Workflow
+  [olimpiurob refs #24190]
 
 2.3 - (2015-03-24)
 ------------------
